--- a/src/app/client/shared/navbar/navbar.component.html
+++ b/src/app/client/shared/navbar/navbar.component.html
@@ -1,1 +1,9 @@
-<p>navbar works!</p>
+
+
+
+  <p-menubar [model]="items">
+
+          <img src="../../../../assets/icon.ico" routerLink="/" height="45" />
+
+  </p-menubar>
+
