UPDATED: TRABAJANDO SOBRE EL NAVBAR: NOTEBOOK

--- a/src/app/client/shared/navbar/navbar.component.html
+++ b/src/app/client/shared/navbar/navbar.component.html
@@ -1,9 +1,8 @@
 
 
-
-  <p-menubar [model]="items">
-
-          <img src="../../../../assets/icon.ico" routerLink="/" height="45" />
-
-  </p-menubar>
+  <div>
+    <p-menubar [model]="items">
+      <img src="../../../../assets/Logo.svg" routerLink="/" height="45" class="mr-2" />
+    </p-menubar>
+  </div>
 
