--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,16 +31,18 @@ h1 {
 //TODO: ESTILOS DE PRIMENG
 //TODO*: NAVBAR
 .p-menubar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: row-reverse;
 }
 
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
 }
 
 .p-menubar img {
-  margin-right: 1rem;
+  margin-right: 2rem;
+}
+
+.p-menubar .p-menubar-custom, .p-menubar .p-menubar-end {
+  margin-right: auto;
 }
 
