UPDATED: Sistema de rutas en navbar funcionando: PC

--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -1,1 +1,20 @@
 <h1>PROYECTOS</h1>
+
+<!-- app/pages/proyectos/proyectos.component.html -->
+<div *ngIf="selectedProject === 's-ager'">
+  <!-- Contenido específico para S.Ager -->
+  <h2>S.Ager Content</h2>
+</div>
+
+<div *ngIf="selectedProject === 'axion'">
+  <!-- Contenido específico para AXION -->
+  <h2>AXION Content</h2>
+</div>
+
+<div *ngIf="selectedProject === 'corralon-velez'">
+  <!-- Contenido específico para AXION -->
+  <h2>CORRALÓN Content</h2>
+</div>
+
+
+
