UPDATED: Navbar diseñado para empezar la funcionalidad del Search: NOTEBOOK

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,18 +31,18 @@ h1 {
 //TODO: ESTILOS DE PRIMENG
 //TODO*: NAVBAR
 .p-menubar {
-  flex-direction: row-reverse;
-}
-
-.p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
+  // flex-direction: row-reverse;
   font-size: 1.1rem;
 }
-
 .p-menubar img {
   margin-right: 2rem;
 }
 
-.p-menubar .p-menubar-custom, .p-menubar .p-menubar-end {
-  margin-right: auto;
-}
+
+
+
+
+
+
+
 
