--- a/src/app/client/shared/navbar/navbar.component.html
+++ b/src/app/client/shared/navbar/navbar.component.html
@@ -1,10 +1,25 @@
 
 
-  <div>
+  <!-- <div>
     <p-menubar [model]="items">
-      <img src="../../../../assets/Logo.svg" routerLink="/" height="45" class="mr-2" />
+      <ng-template pTemplate="end">
+        <img src="../../../../assets/Logo.svg" routerLink="/" height="45" />
+      </ng-template>
     </p-menubar>
-  </div>
+  </div> -->
+
+<div class="card">
+  <p-menubar [model]="items">
+      <ng-template pTemplate="start">
+        <img src="../../../../assets/icon.ico" routerLink="/" height="45" />
+      </ng-template>
+      <ng-template pTemplate="end">
+          <input type="text" pInputText placeholder="Search" class="w-full" />
+      </ng-template>
+  </p-menubar>
+</div>
+
+
 
 
 
