UPDATED: Se modifico una funcionalidad en el input Explorar del navbar: PC

--- a/src/app/client/shared/navbar/navbar.component.html
+++ b/src/app/client/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <p-menubar [model]="items">
       <ng-template pTemplate="start">
-        <img src="../../../../assets/icon.ico" routerLink="/" height="45" />
+        <img src="../../../../assets/Logo.svg" routerLink="/" height="45" />
       </ng-template>
       <ng-template pTemplate="end">
         <span class="search material-symbols-outlined">search</span>
