--- a/src/app/client/shared/navbar/navbar.component.scss
+++ b/src/app/client/shared/navbar/navbar.component.scss
@@ -7,7 +7,8 @@ img {
 }
 
 .error-message {
-  margin-top: 5px;  // Ajusta según sea necesario
+  margin-left: 2rem;
+  margin-top: 0.2rem;
 }
 
 .show-error {
