UPDATED: Seguimos con estilos generales: NOTEBOOK

--- a/src/app/client/shared/navbar/navbar.component.scss
+++ b/src/app/client/shared/navbar/navbar.component.scss
@@ -1,9 +1,13 @@
 input {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  width: auto;
+  height: 2.5rem;
 }
 
 img {
   cursor: pointer;
+  width: auto;
+  height: 4rem;
 }
 
 .error-message {
