UPDATED: Inicio del footer: NOTEBOOK

--- a/src/app/client/shared/footer/footer.component.html
+++ b/src/app/client/shared/footer/footer.component.html
@@ -1,5 +1,33 @@
 <br> <br> <br>
 <h1>FOOTER</h1>
 
+<!-- <footer>
+  <div class="footer">
+
+  </div>
+
+</footer> -->
+
+
+
+<footer>
+  <div class="card">
+    <div class="flex-container">
+      <div class="flex-item">
+        <img src="../../../../assets/Logo.svg" alt="" height="60">
+      </div>
+      <!-- <p-divider layout="vertical" class="divider"></p-divider> -->
+      <div class="flex-item">
+       <h1>Secciones</h1>
+      </div>
+      <!-- <p-divider layout="vertical" class="divider"></p-divider> -->
+      <div class="flex-item">
+        <h1>Contáctanos</h1>
+      </div>
+
+    </div>
+  </div>
+
+</footer>
 
 
