UPDATED: Inicio del footer: PC

--- a/src/app/client/layout/layout.component.html
+++ b/src/app/client/layout/layout.component.html
@@ -1,6 +1,6 @@
 
-<div>
-  <div>
+<div class="layout">
+  <div class="main-margen-superior">
       <shared-navbar></shared-navbar>
   </div>
   <div>
@@ -8,7 +8,7 @@
   </div>
   <div></div>
   <div></div>
-  <div>
+  <div class="main-margen-inferior">
       <shared-footer></shared-footer>
   </div>
 </div>
