--- a/src/app/client/shared/footer/footer.component.html
+++ b/src/app/client/shared/footer/footer.component.html
@@ -1,33 +1,46 @@
-<br> <br> <br>
-<h1>FOOTER</h1>
-
-<!-- <footer>
-  <div class="footer">
-
-  </div>
-
-</footer> -->
 
 
-
-<footer>
-  <div class="card">
-    <div class="flex-container">
-      <div class="flex-item">
-        <img src="../../../../assets/Logo.svg" alt="" height="60">
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-section about">
+          <h2>Sobre Nosotros</h2>
+          <p>Somos una empresa comprometida con la excelencia y la innovación.</p>
+        </div>
+        <div class="footer-section contact">
+          <h2>Secciones</h2>
+          <p> <a routerLink="/nosotros">Sobre nosotros</a></p>
+          <p> <a routerLink="/proyectos">Nuestros proyectos</a></p>
+          <p> <a routerLink="/servicios">Servicios y actividades</a></p>
+          <p> <a routerLink="/contacto">Contáctanos</a></p>
+        </div>
+        <div class="footer-section desarrollador">
+          <h2>Desarrollador</h2>
+          <p>Lionel Cancellieri</p>
+        </div>
       </div>
-      <!-- <p-divider layout="vertical" class="divider"></p-divider> -->
-      <div class="flex-item">
-       <h1>Secciones</h1>
-      </div>
-      <!-- <p-divider layout="vertical" class="divider"></p-divider> -->
-      <div class="flex-item">
-        <h1>Contáctanos</h1>
-      </div>
-
     </div>
-  </div>
+    <hr>
+    <br>
+    <div class="container">
+      <p>&copy; 2024 Basamento SRL</p>
+      <p>Todos los derechos reservados</p>
+    </div>
+    <br>
+    <!-- REDES SOCIALES -->
+    <div class="container">
+      <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer">
+        <i style=" margin-right: 1rem; font-size: 2.5rem; color: white;" class="pi pi-whatsapp"></i>
+      </a>
+      <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer">
+      <i style="margin-right: 1rem; font-size: 2.5rem; color: white" class="pi pi-instagram"></i>
+      </a>
+      <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer">
+        <i style="font-size: 2.5rem; color: white" class="pi pi-facebook"></i>
+      </a>
+    </div>
+  </footer>
 
-</footer>
+
 
 
