UPDATED: Comenzamos la seccion de proyectos: PC

--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -1,19 +1,43 @@
-<h1>PROYECTOS</h1>
 
 <!-- app/pages/proyectos/proyectos.component.html -->
-<div *ngIf="selectedProject === 's-ager'">
+<div class="servicios" *ngIf="selectedProject === 's-ager'">
   <!-- Contenido específico para S.Ager -->
-  <h2>S.Ager Content</h2>
+<div>
+  <p-card header="Satus Ager">
+      <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Pavimentación, plateas de hormigón armado para secadoras</p>
+      <p-divider></p-divider>
+      <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Ejecución de comedor para personal</p>
+      <p-divider></p-divider>
+      <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Plateas de hormigon armado para GLP</p>
+
+  </p-card>
+</div>
 </div>
 
-<div *ngIf="selectedProject === 'axion'">
+<div class="servicios" *ngIf="selectedProject === 'axion'">
   <!-- Contenido específico para AXION -->
-  <h2>AXION Content</h2>
+  <div>
+    <p-card header="Satus Ager">
+        <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Pavimentación, plateas de hormigón armado para secadoras</p>
+        <p-divider></p-divider>
+        <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Ejecución de comedor para personal</p>
+        <p-divider></p-divider>
+        <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Plateas de hormigon armado para GLP</p>
+
+    </p-card>
+  </div>
+
 </div>
 
-<div *ngIf="selectedProject === 'corralon-velez'">
+<div class="servicios" *ngIf="selectedProject === 'corralon-velez'">
   <!-- Contenido específico para AXION -->
-  <h2>CORRALÓN Content</h2>
+  <div>
+    <p-card header="Satus Ager">
+        <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Local comercial para cliente Carlos Velez</p>
+
+
+    </p-card>
+  </div>
 </div>
 
 
