--- a/src/app/client/pages/proyectos/proyectos.component.scss
+++ b/src/app/client/pages/proyectos/proyectos.component.scss
@@ -1,7 +1,7 @@
 .servicios {
   display: flex;
   justify-content: center;
-  p-card {
-    background-color: red;
-  }
+  flex-direction: column;
+  align-items: center;
 }
+
