UPDATED: Galeria de servicios implementada: Restan detalles: PC

--- a/src/app/client/pages/proyectos/proyectos.component.scss
+++ b/src/app/client/pages/proyectos/proyectos.component.scss
@@ -1,7 +1,26 @@
+
 .servicios {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-around;
+  flex-direction: row;
   align-items: center;
 }
+
+// .servicios {
+//   display: flex;
+//   justify-content: center;
+//   flex-direction: column;
+//   align-items: center;
+// }
+
+
+
+
+
+
+
+
+
+
+
 
