--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -1,20 +1,50 @@
-
 <!-- app/pages/proyectos/proyectos.component.html -->
 <div class="servicios" *ngIf="selectedProject === 's-ager'">
   <!-- Contenido específico para S.Ager -->
-<div>
-  <p-card header="Satus Ager">
-      <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Pavimentación, plateas de hormigón armado para secadoras</p>
+  <div>
+    <p-card header="Satus Ager">
+      <p> <i class="pi pi-check" style="font-size: 0.4rem"></i> Pavimentación, plateas de hormigón armado para secadoras
+      </p>
       <p-divider></p-divider>
-      <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Ejecución de comedor para personal</p>
+      <p> <i class="pi pi-check" style="font-size: 0.4rem"></i> Ejecución de comedor para personal</p>
       <p-divider></p-divider>
-      <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Plateas de hormigon armado para GLP</p>
+      <p> <i class="pi pi-check" style="font-size: 0.4rem"></i> Plateas de hormigon armado para GLP</p>
 
-  </p-card>
-</div>
+    </p-card>
+  </div>
 
-<!-- GALERIA DE IMAGENES -->
 
+
+  <!-- GALERIA DE IMAGENES -->
+
+
+  <div class="card">
+    <p-galleria #galleria [value]="images" [(activeIndex)]="activeIndex" [numVisible]="5"
+      [showThumbnails]="showThumbnails" [showItemNavigators]="true" [showItemNavigatorsOnHover]="true" [circular]="true"
+      [autoPlay]="true" [transitionInterval]="3000" [containerStyle]="{'width':'100%'}"
+      [containerClass]="galleriaClass()">
+      <ng-template pTemplate="item" let-item>
+        <img [src]="item.itemImageSrc" style="width: 100%; display: block;" />
+      </ng-template>
+      <ng-template pTemplate="thumbnail" let-item>
+        <div class="grid grid-nogutter justify-content-center">
+          <img [src]="item.thumbnailImageSrc" style="display: block;" />
+        </div>
+      </ng-template>
+
+      <ng-template pTemplate="footer" let-item>
+        <div class="custom-galleria-footer">
+            <button type="button" pButton icon="pi pi-list" (click)="onThumbnailButtonClick()"></button>
+            <span *ngIf="images" class="title-container">
+                <span>{{ activeIndex + 1 }}/{{ images.length }}</span>
+                <span class="title">{{ images[activeIndex].title }}</span>
+                <span>{{ images[activeIndex].alt }}</span>
+            </span>
+            <button type="button" pButton [ngClass]="fullScreenIcon()" (click)="toggleFullScreen()" class="fullscreen-button"></button>
+        </div>
+    </ng-template>
+    </p-galleria>
+  </div>
 
 </div>
 
@@ -22,11 +52,12 @@
   <!-- Contenido específico para AXION -->
   <div>
     <p-card header="Satus Ager">
-        <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Pavimentación, plateas de hormigón armado para secadoras</p>
-        <p-divider></p-divider>
-        <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Ejecución de comedor para personal</p>
-        <p-divider></p-divider>
-        <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Plateas de hormigon armado para GLP</p>
+      <p> <i class="pi pi-check" style="font-size: 0.4rem"></i> Pavimentación, plateas de hormigón armado para secadoras
+      </p>
+      <p-divider></p-divider>
+      <p> <i class="pi pi-check" style="font-size: 0.4rem"></i> Ejecución de comedor para personal</p>
+      <p-divider></p-divider>
+      <p> <i class="pi pi-check" style="font-size: 0.4rem"></i> Plateas de hormigon armado para GLP</p>
 
     </p-card>
   </div>
@@ -37,12 +68,9 @@
   <!-- Contenido específico para AXION -->
   <div>
     <p-card header="Satus Ager">
-        <p> <i class="pi pi-check"  style="font-size: 0.4rem"></i> Local comercial para cliente Carlos Velez</p>
+      <p> <i class="pi pi-check" style="font-size: 0.4rem"></i> Local comercial para cliente Carlos Velez</p>
 
 
     </p-card>
   </div>
 </div>
-
-
-
