--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -34,7 +34,7 @@
 
       <ng-template pTemplate="footer" let-item>
         <div class="custom-galleria-footer">
-            <button type="button" pButton icon="pi pi-list" (click)="onThumbnailButtonClick()"><i class="pi pi-list"></i></button>
+            <!-- <button type="button" pButton icon="pi pi-list" (click)="onThumbnailButtonClick()"><i class="pi pi-list"></i></button> -->
             <span *ngIf="images" class="title-container">
                 <span>{{ activeIndex + 1 }}/{{ images.length }}</span>
                 <span class="title">{{ images[activeIndex].title }}</span>
@@ -45,6 +45,10 @@
     </ng-template>
     </p-galleria>
   </div>
+
+
+
+
 
 </div>
 
