--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,6 +82,7 @@ h1 {
               .p-galleria-content {
                   flex-grow: 1;
                   justify-content: center;
+                  align-items: center;
               }
           }
 
