Agregamos navbar-config.json para traer los datos del navbar desde un json separado: PC

--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -1,8 +1,7 @@
 <br> <br>
 <div class="servicios" *ngIf="servicios && servicios.length > 0">
-
   <!-- Contenido específico para cada servicio -->
-<div class="content" *ngFor="let servicio of servicios">
+<div *ngFor="let servicio of servicios">
   <p-card [header]="servicio.nombre">
 
       <div *ngFor="let opcion of getDescripcionOpciones(servicio.descripcion.opciones)">
