--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -1,8 +1,8 @@
 
 
-<div class="servicios" [ngClass]="proyectosClass" *ngIf="servicios && servicios.length > 0" >
+<div class="proyectos" [ngClass]="proyectosClass" *ngIf="servicios && servicios.length > 0" >
   <!-- Contenido específico para cada servicio -->
-<div class="servicios__content"  *ngFor="let servicio of servicios">
+<div class="proyectos__content"  *ngFor="let servicio of servicios">
 
   <p-card [header]="servicio.nombre">
       <div *ngFor="let opcion of getDescripcionOpciones(servicio.descripcion.opciones)">
@@ -11,7 +11,7 @@
   </p-card>
 
     <!-- GALERIA DE IMAGENES -->
-    <div class="card servicios__content__galeria">
+    <div class="card proyectos__content__galeria">
       <p-galleria #galleria [value]="servicio.imagenes" [(activeIndex)]="activeIndex" [numVisible]="5"
         [showThumbnails]="showThumbnails" [showItemNavigators]="true" [showItemNavigatorsOnHover]="true" [circular]="true"
         [autoPlay]="true" [transitionInterval]="3000" [containerStyle]="{'width':'100%'}"
