--- a/src/app/client/pages/proyectos/proyectos.component.scss
+++ b/src/app/client/pages/proyectos/proyectos.component.scss
@@ -1,30 +1,36 @@
 // APLICAMOS DOS TIPOS DE ESTILOS, UNA PARA PROYECTOS Y OTRA PARA PROYECTOS/:PROYECTO PERO DEJAMOS LOS MISMOS ESTILOS POR EL PRIMENG,
 // IGUAL DEJAMOS LA LÓGICA POR SI NECESITAMOS APLICAR OTROS ESTILOS.
 
-.servicios__content__galeria {
-  margin-top: 0.5rem;
-}
 
-  .individual-proyecto  {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
+.proyectos {
 
+  &__content__galeria {
+    margin-top: 0.5rem;
   }
 
-  .proyectos-page  {
+  &__individual {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__list {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
 
-    .servicios__content {
+    .proyectos__content {
       margin-bottom: 3rem;
       margin-top: 3rem;
     }
-
   }
+}
+
+
+
+
 
 
 
