--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -1,4 +1,4 @@
-
+<h1 class="main-margen-superior">PROYECTOS</h1>
 
 <div class="proyectos" [ngClass]="proyectosClass" *ngIf="servicios && servicios.length > 0" >
   <!-- Contenido específico para cada servicio -->
