--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -1,2 +1,8 @@
-<h1>SERVICIOS</h1>
+<h1 class="main-margen-superior">SERVICIOS</h1>
 
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id omnis esse tempore rem laudantium dolorem exercitationem dolore temporibus aliquid officia iusto, eaque voluptates ab nemo vero ratione maxime molestiae itaque!</p>
