Agremoas mas estilos y las fuentes: PC

--- a/src/app/client/shared/footer/footer.component.html
+++ b/src/app/client/shared/footer/footer.component.html
@@ -4,18 +4,20 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section about">
-          <h2>Sobre Nosotros</h2>
-          <p>Somos una empresa comprometida con la excelencia y la innovación.</p>
+          <h2>CONTACTO</h2>
+          <p>Tucuman 555, Venado Tuerto, Santa Fe</p>
+          <p> administracion.basameto-srl.com </p>
+          <p>+54 9 (3462) 537066</p>
         </div>
         <div class="footer-section contact">
-          <h2>Secciones</h2>
+          <h2>SECCIONES</h2>
           <p> <a routerLink="/nosotros">Sobre nosotros</a></p>
           <p> <a routerLink="/proyectos">Nuestros proyectos</a></p>
           <p> <a routerLink="/servicios">Servicios y actividades</a></p>
           <p> <a routerLink="/contacto">Contáctanos</a></p>
         </div>
         <div class="footer-section desarrollador">
-          <h2>Desarrollador</h2>
+          <h2>DESARROLLADOR</h2>
           <p>Lionel Cancellieri</p>
         </div>
       </div>
