--- a/src/app/client/shared/footer/footer.component.scss
+++ b/src/app/client/shared/footer/footer.component.scss
@@ -1,6 +1,6 @@
 
-$color-background: #758D9A;
-$color-text: #fff;
+$color-background: #033055;
+$color-text: #FFFFFF;
 $transition-duration: 0.3s;
 
 .footer {
