--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,9 +9,10 @@
 /* Colores */
 :root {
   --color-background: #FFFFFF;
-  --footer-backround:#033055;
   --color-primary: #033055;
-  --color-hover: #8A8A8A;
+  --color-secondary: #0096C2;
+  --color-terciary: #F2FDFE;
+  --color-hover: #BFC8D3;
 }
 
 /* You can add global styles to this file, and also import other style files */
@@ -58,22 +59,31 @@ h1 {
 // ESTILOS DE PRIMENG
 
 // NAVBAR
+
+.p-menubar .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
+  color: #FFC107;
+}
+
 .p-menubar {
   height: 6rem;
   background-color: var(--color-primary) ;
+  color: #FFC107;
   // a {
   //   margin-left: 2rem;
   // }
   font-size: 1.3rem;
+  .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
+    color: white;
+  }
   .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text:hover {
-    color: var(--color-hover);
+    color: var(--color-hover) ;
   }
 }
 .p-menubar img {
   margin-right: 3rem;
 }
 .p-menubar .search {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   margin-right: 0.8rem;
 }
 
