--- a/src/app/client/shared/footer/footer.component.html
+++ b/src/app/client/shared/footer/footer.component.html
@@ -1,48 +1,52 @@
+<footer class="footer">
+  <div class="container">
+    <div class="footer-content">
+      <div class="footer-section desarrollador">
+        <h2> <img src="../../../../assets/Logo-blanco.svg" alt="" height="50rem"></h2>
+        <p>Somos una empresa con más de 30 años </p>
+         <p> de trayectoria en el rubro de la construcción, </p>
+         <p> lo que nos convierte en líderes en el sector. </p>
 
+      </div>
 
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-section about">
-          <h2>CONTACTO</h2>
-          <p>Tucuman 555, Venado Tuerto, Santa Fe</p>
-          <p> administracion.basameto-srl.com </p>
-          <p>+54 9 (3462) 537066</p>
-        </div>
-        <div class="footer-section contact">
-          <h2>SECCIONES</h2>
-          <p> <a routerLink="/nosotros">Sobre nosotros</a></p>
-          <p> <a routerLink="/proyectos">Nuestros proyectos</a></p>
-          <p> <a routerLink="/servicios">Servicios y actividades</a></p>
-          <p> <a routerLink="/contacto">Contáctanos</a></p>
-        </div>
-        <div class="footer-section desarrollador">
-          <h2>DESARROLLADOR</h2>
-          <p>Lionel Cancellieri</p>
-        </div>
+      <div class="footer-section contact">
+        <h2>SECCIONES</h2>
+        <p> <a routerLink="/nosotros">Sobre nosotros</a></p>
+        <p> <a routerLink="/proyectos">Nuestros proyectos</a></p>
+        <p> <a routerLink="/servicios">Servicios y actividades</a></p>
+        <p> <a routerLink="/contacto">Contáctanos</a></p>
+      </div>
+
+       <div class="footer-section about">
+        <h2>CONTACTO</h2>
+        <p> <i class="pi pi-map-marker" style="color: #BFC8D3; margin-right: 0.3rem;" ></i> Tucumán 555, Venado Tuerto, Santa Fe</p>
+        <p>
+        <p> <i class="pi pi-envelope" style="color: #BFC8D3; margin-right: 0.3rem;" ></i> administracion{{arroba}}basamento-srl.com </p>
+        <p>
+        <p> <i class="pi pi-phone" style="color: #BFC8D3; margin-right: 0.3rem;"></i> +54 9 (3462) 553824 / 537066</p>
       </div>
     </div>
     <hr>
-    <br>
-    <div class="container">
-      <p>&copy; 2024 Basamento SRL</p>
-      <p>Todos los derechos reservados</p>
-    </div>
-    <br>
-    <!-- REDES SOCIALES -->
-    <div class="container">
-      <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer">
-        <i style=" margin-right: 1rem; font-size: 2.5rem; color: white;" class="pi pi-whatsapp"></i>
-      </a>
-      <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer">
-      <i style="margin-right: 1rem; font-size: 2.5rem; color: white" class="pi pi-instagram"></i>
-      </a>
-      <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer">
-        <i style="font-size: 2.5rem; color: white" class="pi pi-facebook"></i>
-      </a>
-    </div>
-  </footer>
+  </div>
+  <br>
+  <div class="container">
+    <p style="font-size: 0.8rem;"> Copyright &copy; 2024 | BASAMENTO SRL </p>
+  </div>
+  <br>
+  <!-- REDES SOCIALES -->
+        <div class="container">
+          <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer">
+            <i style=" margin-right: 1rem; font-size: 1.5rem; color: white;" class="pi pi-whatsapp"></i>
+          </a>
+          <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer">
+            <i style="margin-right: 1rem; font-size: 1.5rem; color: white" class="pi pi-instagram"></i>
+          </a>
+          <a href="https://tu-enlace-de-facebook" target="_blank" rel="noopener noreferrer">
+            <i style="font-size: 1.5rem; color: white" class="pi pi-facebook"></i>
+          </a>
+        </div>
 
+</footer>
 
 
 
