--- a/src/app/client/shared/footer/footer.component.scss
+++ b/src/app/client/shared/footer/footer.component.scss
@@ -7,13 +7,16 @@ $transition-duration: 0.3s;
   background-color: $color-background;
   color: $color-text;
   padding: 40px 0;
-  text-align: center;
+  // text-align: center;
   // position: fixed;
   height: auto;
   bottom: 0;
   width: 100%;
   transition: background-color $transition-duration;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  &:hover{
+    background-color: darken($color-background, 3%);
+  }
 
   .footer-section.contact p {
     transition: transform 0.3s ease-in-out;
@@ -36,11 +39,14 @@ $transition-duration: 0.3s;
 .footer-content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .footer-section {
-  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   margin-bottom: 20px;
 
   h2 {
@@ -63,10 +69,6 @@ $transition-duration: 0.3s;
       color: lighten($color-text, 10%);
     }
   }
-}
-
-.footer:hover {
-  background-color: darken($color-background, 3%);
 }
 
 
